# tech_comparison

./: .env  .gitignore  pyproject.toml
src/: firecrawl.py  workflow.py
